--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fuse-box": "2.0.0-beta.14",
     "typescript": "^2.3.2",
     "vue": "~2.3.2",
-    "vue-template-compiler": "~2.3.2"
+    "vue-template-compiler": "~2.3.2",
+    "vue-template-es2015-compiler": "~1.5.2"
   }
 }
